feat: update user retrieval to use UUID instead of access token and enhance job post tag filtering